--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
     "bundle": "webpack --config webpack-config.js --env=development",
     "start": "webpack-dev-server --config webpack-config.js --hot"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
+    "react-refresh-typescript": "^2.0.7",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
-  },
-  "devDependencies": {
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "react-refresh-typescript": "^2.0.7",
-    "webpack-cli": "^5.0.1"
   }
 }
